# exercism

./: readme.md
elixir/: .gitignore  (+5 more)
rust/: .gitignore  Cargo.toml  flake.nix  readme.md
rust/benches/: alphametics_benchmark.rs
rust/src/: armstrong_number.rs  beer_song.rs  collatz_conjecture.rs  difference_of_squares.rs  diffie_hellman.rs  easy.rs  gigasecond.rs  grains.rs  hard.rs  high_scores.rs  lib.rs  main.rs  matching_brackets.rs  medium.rs  nth_prime.rs  proverb.rs  reverse_string.rs
rust/src/easy/: armstrong_number.rs  beer_song.rs  bob.rs  bottle_song.rs  collatz_conjecture.rs  difference_of_squares.rs  eliuds_eggs.rs  grains.rs  high_scores.rs  kindergarten_garden.rs  magazine_cutout.rs  prime_factors.rs  raindrops.rs  reverse_polish_notation_calculator.rs  series.rs  sum_of_multiples.rs
rust/src/hard/: circular_buffer.rs  dominoes.rs  doubly_linked_list.rs  forth.rs  macros.rs  ocr_numbers.rs  parallel_letter_frequency.rs  poker.rs  react.rs  rectangles.rs  xorcism.rs
rust/src/medium/: accumulate.rs  acronym.rs  affine_cipher.rs  all_your_base.rs  allergies.rs  alphametics.rs  anagram.rs  atbash_cipher.rs  binary_search.rs  book_store.rs  bowling.rs  clock.rs  crypto_square.rs  custom_set.rs  decimal.rs  diamond.rs  dot_dsl.rs  etl.rs  fizzy.rs  grade_school.rs  grep.rs  hamming.rs  isbn_verifier.rs  isogram.rs  knapsack.rs  largest_series_product.rs  luhn.rs  luhn_from.rs  luhn_trait.rs  minesweeper.rs  mod.rs  nucleotide_count.rs  paas_io.rs  palindrome_products.rs  pangram.rs  pascals_triangle.rs  perfect_numbers.rs  phone_number.rs  pig_latin.rs  (+28 more)
(+169 files in other folders)
