[package]
name = "exercism"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8.5" # easy/diffie_hellman.rs
time = "0.3" # easy/gigasecond.rs
anyhow = "1.0" # medium/grep.rs
num-bigint = "0.4.3" # medium/decimal.rs

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "alphametics_benchmark"
harness = false
